# negaposi

./: list.csv  negaposi.py  pyproject.toml  scraping.py
