[tool.poetry]
name = "negaposi"
version = "0.1.0"
description = ""
authors = ["tyamzak <getagelessgetageless@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
plotly = "^5.14.1"
requests = "^2.30.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
